--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,11 @@ env:
   global:
     - NINJA=../../../ninja/ninja
 script:
-  npm install && npm test
+  npm install && npm run build && npm test
 node_js:
   - 4
   - 5
   - 6
+  - 4
+  - 0.12
+  - 0.10
