--- a/package.json
+++ b/package.json
@@ -6,16 +6,25 @@
     "gyp": "bin/gyp"
   },
   "main": "lib/gyp.js",
+  "files": [
+    "lib"
+  ],
   "scripts": {
+    "build": "make build",
+    "dev": "make build-watch",
     "lint": "make lint",
     "format": "make format",
     "test": "make check && make lint",
-    "coverage": "make coverage"
+    "coverage": "make coverage",
+    "prepublish": "npm run build"
   },
   "keywords": [],
   "author": "Fedor Indutny <fedor@indutny.com>",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-register": "^6.9.0",
     "eslint": "^2.12.0",
     "mocha": "^2.5.3",
     "ninja.js": "^1.1.0",
@@ -29,5 +38,10 @@
     "parser-base": "^1.0.0",
     "yargs-parser": "^2.4.0",
     "istanbul": "^0.4.5"
+  },
+  "babel": {
+    "presets": [
+      "es2015-loose"
+    ]
   }
 }
