--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "build": "make build",
-    "dev": "make build-watch",
+    "watch": "make build-watch",
     "lint": "make lint",
     "format": "make format",
     "test": "make check && make lint",
@@ -23,7 +23,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.10.1",
-    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-env": "^1.2.2",
     "babel-register": "^6.9.0",
     "eslint": "^2.12.0",
     "mocha": "^2.5.3",
@@ -34,14 +34,21 @@
     "ninja.js": "^1.1.0"
   },
   "dependencies": {
+    "istanbul": "^0.4.5",
     "mkdirp": "^0.5.1",
     "parser-base": "^1.0.0",
-    "yargs-parser": "^2.4.0",
-    "istanbul": "^0.4.5"
+    "yargs-parser": "^2.4.0"
   },
   "babel": {
     "presets": [
-      "es2015-loose"
+      [
+        "env",
+        {
+          "targets": {
+            "node": 4
+          }
+        }
+      ]
     ]
   }
 }
